fix:修改全局搜索接口
